ansible/roles/k8s_addon_kube_prometheus_stack/files/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus-stack
spec:
  parentRefs:
    - name: public
      namespace: cilium-ingress-gateway
      sectionName: tls-k8s-home-arpa
  hostnames:
    - grafana.k8s.home.arpa
  rules:
    - backendRefs:
        - name: grafana
          port: 443
          weight: 1
